minor change research statement

--- a/Statements/Xambo.ResearchStatement.tex
+++ b/Statements/Xambo.ResearchStatement.tex
@@ -85,15 +85,9 @@ bookmarks, colorlinks, breaklinks,
 Anna Xambó, PhD\\
 \href{http://annaxambo.me}{annaxambo.me}
 
-\section*{Vision \& Mission}
+\section*{Technology, Design, Experience}
 
-I envision pushing the boundaries of \textbf{technology}, \textbf{design}, and \textbf{experience} towards more collaborative, democratic and sustainable spaces, what I term tangible music computing. My mission is to do interdisciplinary research that embraces techniques and research methods from engineering, social sciences, and the arts for creating a new generation of interactive music systems.
-
-\section*{Foci of research}
-
-This research contributes to the fields of \textbf{HCI} and \textbf{sound} \& \textbf{music computing}.\\ 
-
-My research has \textbf{three foci}:
+My research contributes to the fields of \textbf{HCI} and \textbf{sound} \& \textbf{music computing} and has \textbf{three foci}:
 
 \begin{enumerate}
 \item \textbf{Technology}: using cutting-edge technology in real-time interactive musical systems and creative algorithms borrowed from MIR and machine learning that can be useful for real-time performance and musical improvisation e.g. live coding or algorithmic music.
@@ -101,6 +95,9 @@ My research has \textbf{three foci}:
 \item \textbf{Experience}: bringing more democratic, collaborative and participatory experiences to the fore e.g. multichannel experiences, participatory performances, DIY workshops. 
 \end{enumerate}
 
+\section*{Tangible Music Everywhere}
+
+I envision pushing the boundaries of \textbf{technology}, \textbf{design}, and \textbf{experience} towards more collaborative, democratic and sustainable spaces, what I term \textbf{tangible music everywhere}. My mission is to do interdisciplinary research that embraces techniques and research methods from engineering, social sciences, and the arts for creating a new generation of interactive music systems.
 
 \section*{Related publications}
 
