more updates march 2017

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -140,6 +140,7 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %%\hrule
 \section*{Employment}
 \noindent
+\years{07/2015--present}\textsc{Postdoctoral Fellow}. Center for Music Technology | Digital Media Program, Georgia Tech. \\
 \years{08/2013--09/2014}\textsc{Research Fellow}. London Knowledge Lab, UCL Institute of Education. London. \\
 %{\small Qualitative data collection and analysis (6 sites), development of research tools and processes, dissemination activities and paper writing of results.}\\
 \years{02/2004--06/2010}\textsc{Co-Founder, Project Manager, Web Designer \& Web Developer}. Nodular Soft. Barcelona. \\
@@ -255,7 +256,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
-\years{2017}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (accepted) Experience and ownership with a tangible computational music installation for informal learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. \\ 
+\years{2017}\textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) Experience and ownership with a tangible computational music installation for informal learning. In \emph{Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI '17)}. Yokohama, Japan. pp. 351--360.\\ 
 \years{2016b}Freeman, J., Magerko, B., Edwards, D., Miller, M., Moore, R., \textbf{Xambó, A.} (2016). “Using EarSketch to broaden participation in computing and music". In \emph{Proceedings of the 13th Sound and Music Computing Conference (SMC 2016)}. Hamburg, Germany. pp. 156--163.\\
 \years{2016a}\textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). “Challenges and new directions for collaborative live coding in the classroom". In \emph{Proceedings of the International Conference of Live Interfaces (ICLI 2016)}. Brighton, UK.\\
 \years{2014}\textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME '14)}. London. pp. 249--252.\\
@@ -411,6 +412,10 @@ Role: Concept, part of the implementation and tangible user interface design.\\
 Collaborator: Gerard Roma.
 
 \subsection*{Code}
+\years{2017}MIRLC. (2016--2017). Retrieved March 30 2017, from \href{https://github.com/axambo/MIRLC}{https://github.com/axambo/MIRLC}\\
+Role: Concept and implementation.\\
+\years{2017}Beacon. (2017). Retrieved March 30 2017, from \href{https://github.com/axambo/beacon}{https://github.com/axambo/beacon}\\
+Role: Concept and implementation of the audio engine.\\
 \years{2016}Algonoise. (2016). Retrieved October 18 2016, from \href{https://github.com/axambo/algonoise}{https://github.com/axambo/algonoise}\\
 Role: Concept and implementation.\\
 \years{2014}SoundXY4: The Art of Noise. (2014). Retrieved October 18 2016, from \href{https://github.com/axambo/soundxy4}{https://github.com/axambo/soundxy4}\\
