more updates march 2017

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -326,6 +326,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Poster Presentations \& Demos}
 
+\years{2017} \textsc{Poster \& Demo Presenter}. (March 21, 2017). Experience and ownership with a tangible computational music installation for informal learning. \emph{TEI '17}. Yokohama, Japan.\\
 \years{2016b} \textsc{Poster \& Demo Presenter}. (August 11, 2016). Learning to code through MIR. \emph{Late-Breaking Demo Session of ISMIR 2016}. New York.\\
 \years{2016a} \textsc{Poster \& Demo Presenter} together with Roma, G. (July 2, 2016). Do the Buzzer Shake. \emph{ICLI 2016}. Brighton, UK.\\
 \years{2015} \textsc{Poster \& Demo Presenter} together with McKlin, T. (August 14, 2015). EarSketch: a STEAM approach to broadening participation in computer science principles. \emph{RESPECT 2015}. Charlotte, NC. USA.\\
