--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -520,9 +520,10 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \section*{Professional Activities}
 \noindent
 
-\subsection*{Organization Member}
+\subsection*{Professional Organization Member}
 \noindent
-\emph{Association for Computing Machinery}.
+\emph{Association for Computing Machinery (ACM)}.\\
+\emph{International Computer Music Association (ICMA)}.
 
 \subsection*{Committee Member / Conference Chair}
 \noindent
