minor changes april 2017

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -193,7 +193,7 @@ Role: Postdoctoral Fellow and Co-Writer of the grant proposal. \\
 Collaborators: Brian Magerko (PI), Jason Freeman (Co-PI), Mike Horn (Co-PI).\\
 Total Dollar Amount: \$2,517,690.00
 
-\subsection*{Organization Co-Founder}
+\subsection*{Fundraiser}
 
 \years{10/2016}\textsc{Women in Music Tech Fall Event} \\
 Role: Co-Founder \& Co-Chair of the organization, Co-Organizer of the event. \\[.1cm]
@@ -287,7 +287,7 @@ Candidate’s Share: 50\% (\$1,650)
 \noindent
 
 \years{2008}\textbf{Xambó, A.} (2008). Interfaces for Sketching Musical Compositions. Unpublished master's thesis. UPF.\\ 
-\years{2004}\textbf{Xambó, A.} and Martos, E. (2004). Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària (Report of new technologies and audiovisual communication in the primary education). Unpublished report. Supported by Fundació Caixa de Sabadell. In collaboration with UB.
+\years{2004}\textbf{Xambó, A.}, Martos, E. (2004). Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària (Report of new technologies and audiovisual communication in the primary education). Unpublished report. Supported by Fundació Caixa de Sabadell. In collaboration with UB.
 
 \section*{Talks \& Oral Presentations}
 
@@ -334,7 +334,7 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2012} \textsc{Demo Presenter}. (January 10, 2012). Tangible Additive Sound Synthesis (TASS). \emph{Welcome to the French Embassy}, OU. Milton Keynes, UK.\\
 \years{2011d} \textsc{Poster Presenter}. (June 17, 2011). Designing and evaluating interactive systems: Musical tabletops for collective music performance. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
 \years{2011c} \textsc{Poster \& Demo Presenter} together with Milne, A. J. (May 30, 2011). Hex Player — a virtual musical controller. \emph{NIME '11}. Oslo, Norway.\\
-\years{2011b} \textsc{Poster Presenter}. (March 8, 2011). Designing and evaluating interactive systems: Musical tabletops for collective music performance. \emph{The Open University Poster Competition 2011}. Milton Keynes, UK.
+\years{2011b} \textsc{Poster Presenter}. (March 8, 2011). Designing and evaluating interactive systems: Musical tabletops for collective music performance. \emph{The Open University Poster Competition 2011}. Milton Keynes, UK.\\
 \years{2011a} \textsc{Poster Presenter}. (January 25, 2011) TOUCHtr4ck: democratic collaborative music. \emph{TEI '11}. Funchal, Madeira.\\
 \years{2010} \textsc{Poster Presenter}. (June 8, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
 \years{2008b} \textsc{Poster Presenter}. (June 9--11, 2010). Interfaces for Sketching Musical Compositions. \emph{SMC Summer School 2008}. Genoa, Italy.\\
