more updates april 2017

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -100,7 +100,7 @@ email: \href{mailto:anna.xambo@gatech.edu}{anna.xambo@gatech.edu}\\
 
 %%\hrule
 \section*{Areas of Interest}
-Design of digital musical instruments (DMIs) • Real-time interactive systems for music performance • Human-computer interaction • Interaction design • Tangible, physical \& social computing • Computer-supported collaborative, participatory \& improvisation music • Live coding • Real-time music information retrieval • Multichannel spatialization • Algorithmic composition \& randomized algorithms • Immersive sound experiences • Women in music tech • Arts \& social sciences research methods • STEAM education • Data visualization • Creative programming 
+Design of digital musical instruments (DMIs) • Real-time interactive systems for music performance • Human-computer interaction • Interaction design • Tangible, physical \& social computing • Computer-supported collaborative, participatory \& improvisation music • Live coding • Real-time music information retrieval and machine learning • Multichannel spatialization • Algorithmic composition \& randomized algorithms • Immersive sound experiences • Women in music tech • Arts \& social sciences research methods • STEAM education • Data visualization • Creative programming
 
 %\hrule
 \section*{Education}
@@ -195,16 +195,24 @@ Total Dollar Amount: \$2,517,690.00
 
 \subsection*{Fundraiser}
 
-\years{10/2016}\textsc{Women in Music Tech Fall Event} \\
-Role: Co-Founder \& Co-Chair of the organization, Co-Organizer of the event. \\[.1cm]
+\years{05/2016--present}\textsc{Women in Music Tech} \\
+Role: Co-Founder \& Co-Chair of the organization, Co-Organizer of the event. \\
+Total Fundraised Dollar Amount: \$7,250\\[.1cm]
+\years{08/2016--05/2017}\textbf{2016-2017 Academic Year}\\
 Funding body: School of Music, Georgia Tech. \\
 Total Dollar Amount: \$2,500\\[.1cm]
+\years{08/2016--11/2016}\textbf{Fall 2016 Concert Event}\\
 Funding body: College of Design, Georgia Tech. \\
 Total Dollar Amount: \$2,000\\[.1cm]
 Funding body: ADVANCE program, Georgia Tech. \\
 Total Dollar Amount: \$1,000\\[.1cm]
-Funding body: Women's Resource Center, Georgia Tech \\
-Total Dollar Amount: \$250
+Funding body: Women's Resource Center, Georgia Tech. \\
+Total Dollar Amount: \$250\\[.1cm]
+\years{08/2016--11/2016}\textbf{Spring 2017 Actions}\\
+Funding body: ADVANCE Program, Georgia Tech. \\
+Total Dollar Amount: \$1,000\\[.1cm]
+Funding body: Women's Resource Center, Georgia Tech. \\
+Total Dollar Amount: \$500
 
 \subsection*{Creator | Director}
 
@@ -214,7 +222,7 @@ Project: ``Transdata Pr.''.  \\
 Role: Creator, Video Editor \& Director.\\
 Collaborators: Gerard Roma (music), Oscar Abril Ascaso (essay). \\
 Total Dollar Amount: \$3,300 \\ 
-Candidate’s Share: 50\% (\$1,650)\\[.9cm] 
+Candidate’s Share: 50\% (\$1,650)
 
 \years{09/1998--08/1999}\textsc{Audiovisual production grant} \\
 Funding body: Departament de Cultura de la Generalitat de Catalunya (Department of Culture of Catalan Government).\\
@@ -232,7 +240,7 @@ Candidate’s Share: 50\% (\$1,650)
 \textbullet \- \href{https://scholar.google.com/citations?user=yi3WXM8AAAAJ}{Scholar Google}\\
 \textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}\\
 \textbullet \- \href{http://open.academia.edu/AnnaXambo}{Academia.edu}\\
-\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}\\
+\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}
 
 \section*{Publications}
 \noindent
@@ -267,7 +275,7 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2011a}Milne, A. J., \textbf{Xambó, A.}, Laney, R., Sharp, D. B., Prechtl, A. and Holland, S. (2011). “Hex Player — a virtual musical controller". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression (NIME '11)}. Oslo, Norway. pp. 244--247.\\
 \years{2010b}Laney, R., Dobbyn, C., \textbf{Xambó, A.}, Schirosa, M., Miell, D., Littleton, K. and Dalton, N. (2010). “Issues and techniques for collaborative music making on multi-touch surfaces". In \emph{Proceedings of the 7th Sound and Music Computing Conference (SMC 2010)}. Barcelona. pp. 146–153.\\
 \years{2010a}Haro, M., \textbf{Xambó, A.}, Fuhrmann, F., Bogdanov, D., Gómez, E. and Herrera, P. (2010). “The Musical Avatar: a visualization of musical preferences by means of audio content description". In \emph{Proceedings of the 5th Audio Mostly Conference (AM '10)}. Piteå, Sweden.\\
-\years{2008}Roma, G. and \textbf{Xambó, A.} (2008). “A tabletop waveform editor for live performance". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression (NIME '08)}. Genoa, Italy.\\
+\years{2008}Roma, G. and \textbf{Xambó, A.} (2008). “A tabletop waveform editor for live performance". In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression (NIME '08)}. Genoa, Italy.
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
@@ -290,8 +298,11 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2004}\textbf{Xambó, A.}, Martos, E. (2004). Crossmedia Infantil: Estudi sobre les noves tecnologies i la comunicació audiovisual a l'escola infantil i primària (Report of new technologies and audiovisual communication in the primary education). Unpublished report. Supported by Fundació Caixa de Sabadell. In collaboration with UB.
 
 \section*{Talks \& Oral Presentations}
+\noindent
 
 \subsection*{External}
+\noindent
+
 \years{2016b} \textsc{Oral Presenter}. (July 2, 2016). Challenges and new directions for collaborative live coding in the classroom. \emph{ICLI 2016}. Brighton, UK.\\
 \years{2016a} \textsc{Keynote Speaker}. (April 22, 2016). Anna Xambó and Liz Dobson in conversation. \emph{Women in Sound Women on Sound 2016: Educating girls in sound} at University of Lancaster. Lancaster, UK.\\
 \years{2015} \textsc{Lightning Talk Speaker}. (August 14, 2015). EarSketch: a STEAM approach to broadening participation in computer science principles. \emph{RESPECT 2015}. Charlotte, NC. USA.\\
@@ -307,6 +318,9 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2007}\textsc{Oral Presenter} together with Roma, G. (September 20, 2007). A sound editor with a tangible interface. \emph{SCSymposium(2007)}, DCM. The Hague, The Netherlands.
 
 \subsection*{Own Institution}
+\noindent
+
+\years{2017} \textsc{Panel Member} together with Ikkache, L. (May 4, 2017). Women in Music Tech 2016--2017. Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
 \years{2016d} \textsc{Lightning Talk Speaker}. (November 2, 2016). Tangible user interfaces and tabletops. \emph{First Annual Women and Music Tech Concert and Reception}, The Garage. Atlanta, GA. USA.\\
 \years{2016c} \textsc{Panel Member} together with Ikkache, L. and Jackson, D. (May 5, 2016). Women in Sound. Oral presentation and discussion. \emph{Georgia Tech Center for Music Technology (GTCMT)}, Geogia Tech. Atlanta, GA, USA.\\
 \years{2016b} \textsc{Oral Presenter}. (February 25, 2016). Algorithmic composition: my personal journey. Oral presentation as a guest speaker in Jason Freeman's \emph{Computer Music Composition} class. GTCMT. Atlanta, GA, USA.\\
@@ -320,11 +334,13 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2011b} \textsc{Oral Presenter}. (June 16, 2011). Tabletop groupware for music performance: Design and evaluation. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
 \years{2011a} \textsc{Oral Presenter}. (May 17, 2011). Tabletop groupware for music performance: Design and evaluation. \emph{2011 Doctoral Workshops Conference}, OU. Milton Keynes, UK.\\
 \years{2010b} \textsc{Oral Presenter}. (June 8, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{CRC PhD Student Conference 2010}, OU. Milton Keynes, UK.\\
-\years{2010a} \textsc{Oral Presenter}. (May, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{Music Research Day}, Music Research Studio, OU. Milton Keynes, UK.\\
+\years{2010a} \textsc{Oral Presenter}. (May, 2010). Issues and techniques for collaborative music making on multi-touch surfaces. \emph{Music Research Day}, Music Research Studio, OU. Milton Keynes, UK.
 
 \section*{Poster Presentations, Demos \& Workshops}
+\noindent
 
 \subsection*{Poster Presentations \& Demos}
+\noindent
 
 \years{2017} \textsc{Poster \& Demo Presenter}. (March 21, 2017). Experience and ownership with a tangible computational music installation for informal learning. \emph{TEI '17}. Yokohama, Japan.\\
 \years{2016b} \textsc{Poster \& Demo Presenter}. (August 11, 2016). Learning to code through MIR. \emph{Late-Breaking Demo Session of ISMIR 2016}. New York.\\
@@ -342,31 +358,41 @@ Candidate’s Share: 50\% (\$1,650)
 
 
 \subsection*{Workshops}
+\noindent
 
 \years{2013} \textbf{Xambó, A.} (May 2, 2013). Introduction to SuperCollider. \emph{Music Computing Meeting}, OU. Milton Keynes, UK.\\
 \years{2012} \textbf{Xambó, A.}; Roma, G. and Bovermann, T. (April 15, 2012). Tangible musical interfaces with SuperCollider. \emph{SuperCollider Symposium 2012}, Goldsmiths, University of London. London.
 
 \subsection*{Webinars}
+\noindent
 
 \years{2016} \textbf{Xambó, A.} (October 28, 2016). Debugging with EarSketch. GTCMT, Georgia Tech, Atlanta, GA, USA.
 
 \section*{Discography}
+\noindent
 
 \subsection*{Solo Albums}
+\noindent
+
 \years{2013}peterMann. (2013). \emph{On the Go} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
-\years{2011}peterMann. (2011). \emph{init} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
+\years{2011}peterMann. (2011). \emph{init} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.
 
 \subsection*{Band Albums}
+\noindent
+
 \years{1996}La Más Fina. (1996). \emph{Zande Phondex} [CD]. Barcelona: Apache Productions.\\
 \years{1994}La Más Fina. (1994). \emph{Como quien dice la hoja iberia extrafina} [Cassette]. Barcelona: Self-released.\\
-\years{1992}Sosa's Cáustica. (1992). \emph{Paraponera Clavata} [Cassette]. Barcelona: Murmur Town.\\
+\years{1992}Sosa's Cáustica. (1992). \emph{Paraponera Clavata} [Cassette]. Barcelona: Murmur Town.
 
 \subsection*{Participation in Compilations}
+\noindent
+
 \years{2016}peterMann. (2016). Go wild y'all (1 min). in \emph{Microtopies 2016} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
-\years{2015}peterMann. (2015). ldnsktch01(1 min). In \emph{Microtopies 2015} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
+\years{2015}peterMann. (2015). ldnsktch01 (1 min). In \emph{Microtopies 2015} [MP3 files]. Barcelona: Gracia Territori Sonor.\\
 \years{2010}peterMann. (2010). init11 (3 min 29 sec). In \emph{Electronic music from Catalonia 2010} [CD]. Barcelona: Catalan! Arts / Sonar, Barcelona.
 
 \subsection*{Broadcasting}
+\noindent
 
 \years{2013f}peterMann's og02. (July 28, 2013). BiP\_HOp Generation on Radio Grenouille.\\
 \years{2013e}peterMann's og01, og05, og07 \& og09. (June 23, 2013). Framework radio \#426.\\
@@ -377,12 +403,13 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2010b}peterMann's init 10, init 11 \& init 12. (December 18, 2010). Onda Sonora.\\
 \years{2010a}peterMann's init 2. (April 12, 2010). Sismógrafo.
 
-
 \section*{Selected Performances}
+\noindent
 
 \subsection*{Solo Performances}
+\noindent
 
-\years{2017}peterMann. (January 8, 2017). Live coding session. \emph{Noiselets}. Freedonia, Barcelona, Spain.\\
+\years{2017}peterMann. (January 8, 2017). Live coding session. \emph{Noiselets: A Noise Music Microfestival}. Freedonia, Barcelona, Spain.\\
 \years{2016b}Xambó, A. (April 22, 2016). Live coding with EarSketch. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
 \years{2016a}peterMann. (April 22, 2016). Live. \emph{Women in Sound Women on Sound 2016: Educating girls in sound}. Jack Hylton Music Room, University of Lancaster. Lancaster, UK.\\
 \years{2013}Xambó, A. (October 4, 2013). Live coding session. \emph{Perspectives on Multichannel Live Coding}. PHONOS. Sala Polivalent, UPF. Barcelona, Spain.\\
@@ -390,14 +417,18 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2006}peterMann. (June 10, 2006). Live. \emph{5a Mostra Sonora i Visual | Convent Sant Agustí}. Barcelona, Spain.
 
 \subsection*{Collaborative Performances}
+\noindent
+
 \years{2017}Anna Weisling and Anna Xambó. (February 11, 2017). Beacon. \emph{Root Signals Festival}. Georgia Southern University. Statesboro, Georgia, United States.\\
 \years{2012}pulso (Gerard Roma and Anna Xambó). (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona, Spain.\\
 \years{2004}pulso (Gerard Roma and Anna Xambó). (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
-\years{2002}b4ng (Gerard Roma, Celia Brugos, Clarens, Anna Xambó). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain.\\[1cm] %WORKAROUND WITH CURRENT CONTENT. DELETE WITH ADDITION OF NEW CONTENT.
+\years{2002}b4ng (Gerard Roma, Celia Brugos, Clarens, Anna Xambó). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. %WORKAROUND WITH CURRENT CONTENT. DELETE WITH ADDITION OF NEW CONTENT.
 
 \section*{Other Creative Products}
+\noindent
 
 \subsection*{Awarded Music Hacks}
+\noindent
 
 \years{2014}crowdj. \emph{Music Hack Day}. Barcelona, Spain.\\ 
 Prize: Rdio prize.\\
@@ -413,6 +444,8 @@ Role: Concept, part of the implementation and tangible user interface design.\\
 Collaborator: Gerard Roma.
 
 \subsection*{Code}
+\noindent
+
 \years{2017}MIRLC. (2016--2017). Retrieved March 30 2017, from \href{https://github.com/axambo/MIRLC}{https://github.com/axambo/MIRLC}\\
 Role: Concept and implementation.\\
 \years{2017}Beacon. (2017). Retrieved March 30 2017, from \href{https://github.com/axambo/beacon}{https://github.com/axambo/beacon}\\
@@ -425,6 +458,7 @@ Role: Concept, implementation and tangible user interface design.\\
 Role: Concept, implementation and tangible user interface design.
 
 \subsection*{Video Creations \& Animation Films}
+\noindent
 
 \years{2003}Xambó, A. (2003). \emph{Cosmogonias} (3 min). Spain. Video creation | Animation film.\\
 \years{2002b}Xambó, A. (2002). \emph{b.scope} (3 min). Spain. Video creation.\\ %3:23
@@ -436,6 +470,7 @@ Role: Concept, implementation and tangible user interface design.
 \years{1998a}Xambó, A. (1998). \emph{Sueños} (1 min). Spain. Video creation | Animation film.
 
 \subsection*{Installations \& Visuals}
+\noindent
 
 \years{09/2002}\emph{I love Japan}, Circuit Festival, Barcelona.\\
 %Description: Audiovisual installation for Divinas Palabras' Japan collection. \\
@@ -445,7 +480,7 @@ Collaborators: Urtzi Grau (director), Emma Dünner, Jorge Meneses, Ana Otero.\\
 \years{03/2002--08/2002}\emph{Astoria (cinema \& restaurant)}, Barcelona. \\
 %Description: Visuals for the opening and first season of the Astoria (cinema \& restaurant) venue.\\
 Role: Co-filming and visuals.\\ 
-Collaborators: Babylon Cannes (concept).\\
+Collaborators: Babylon Cannes (concept).
 
 \years{09/2001}\emph{Eme3density, Second Architectural Market}, Centre de Cultura Contemporània de Barcelona (CCCB), Barcelona.\\
 Role: Visuals \& Flash programming. \\ %(Flash animation and programming of the website presented in the event).\\
@@ -460,44 +495,67 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 
 \years{02/2004--06/2004}Centre de la Imatge i la Technologia Multimèdia, Universitat Politècnica de Catalunya, Terrassa, Barcelona.\\ 
 Course: \emph{Experimental Motion Graphics} (45 h). \# Students: $\sim$15. \\
+Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{10/2003--02/2004}BAU Escola de Disseny, Universitat de Vic, Barcelona.\\ 
 Course: \emph{Crossmedia} (45 h). \# Students: $\sim$15. \\
+Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
 \years{11/1999--06/2003}Media Art Institute Fak d'Art, Barcelona.\\ 
 Course: \emph{Computer Animation} (90 h). \# Students: $\sim$15. \\ 
+Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{11/2003--06/2004}Media Art Institute Fak d'Art, Barcelona.\\ 
 Course: \emph{Digital Compositing with Adobe AfterEffects} (45 h). \# Students: $\sim$10. \\ 
+Role: Creation of syllabus, creation of content, instruction and assessment.\\
 Course: \emph{Photography in Motion} (45 h). \# Students: $\sim$10. \\ 
-Course: \emph{Type in Motion} (45 h). \# Students: $\sim$10. 
+Role: Creation of syllabus, creation of content, instruction and assessment.\\
+Course: \emph{Type in Motion} (45 h). \# Students: $\sim$10.\\
+Role: Creation of syllabus, creation of content, instruction and assessment.
 
 \subsection*{Professional Courses}
 \noindent
 
 \years{04/2004--05/2005}Crea Formación, Barcelona.\\
 Course: \emph{Usability} (12 h). \# Students: $\sim$5.\\ 
+Role: Instruction.\\
 Course: \emph{Internet Design Techniques} (12 h). \# Students: $\sim$5.\\ 
-Course: \emph{Web Design with DreamWeaver} (24 h). \# Students: $\sim$5.\\ 
+Role: Instruction.\\
+Course: \emph{Web Design with DreamWeaver} (24 h). \# Students: $\sim$5.\\
+Role: Instruction.\\ 
 Course: \emph{Multimedia Content with Adobe Flash} (16 h). \# Students: $\sim$5. \\
+Role: Instruction.\\
 Course: \emph{Flash Programming} (20 h) \# Students: $\sim$5.\\ 
+Role: Instruction.\\
 Course: \emph{Theoretical Aspects in Graphic Design} (12 h). \# Students: $\sim$5.\\ 
-Course: \emph{Video Edition with Adobe Premiere} (60 h) \# Students: 1.
+Role: Instruction.\\
+Course: \emph{Video Edition with Adobe Premiere} (60 h) \# Students: 1.\\
+Role: Creation of syllabus, creation of content and instruction.
 
 \subsection*{Preschool \& Primary School Courses}
 \noindent
 
 \years{03/2004--06/2004}Escola Magòria, Barcelona.\\
 Course: \emph{Crossmedia infantil} (11 h). \# Students (6--7 years old): $\sim$8.\\
+Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
 \years{03/2004--05/2004}Escola Costa i Llobera, Barcelona.\\ 
 Course: \emph{Crossmedia infantil} (9 h). \# Students (9--10 years old): $\sim$15.\\
+Role: Co-creation of syllabus, creation of content, instruction and assessment.\\
 \years{03/2004--05/2004}Escola Glòries, Barcelona.\\
-Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8.
+Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8.\\
+Role: Co-creation of syllabus, creation of content, instruction and assessment.
 
+\section*{Mentoring}
+\noindent
+
+\years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (Master students of Digital Media) and Anna Weisling (PhD student of Digital Media) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
+\years{09/2015--05/2017}Co-advisor of Pratik Shah (Master student of the School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at ICLI '16 (see Peer-Reviewed Conference Papers) and we have submitted a second conference paper and are preparing a journal article.
 
 \section*{Additional Experience}
+\noindent
 
 \subsection*{Concerts Co-Organization}
+\noindent
 
-\years{2017}Noiselets. (January 8, 2017). Freedonia, Barcelona.\\
-\years{2016c}Women in Music Tech. (November 2, 2016). The Garage. Atlanta, GA, USA.\\
+\years{2017}Noiselets: A Noise Music Microfestival. (January 8, 2017). Freedonia, Barcelona.\\
+\years{2016c}The First Annual Women in Music Tech: Concert and Reception. (November 2, 2016). The Garage. Atlanta, GA, USA.\\
 \years{2016b}Audience device participation. (April 5, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2016a}Live coding and the audiovisual web. (April 4, 2016). \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2013b}Perspectives on multichannel live coding. (October 4, 2013). PHONOS. Sala Polivalent, UPF. Barcelona.\\
@@ -505,16 +563,19 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \years{2012}Live Coding Sessions. (March 15, 2012). Niu. Barcelona.
 
 \subsection*{Blogging}
+\noindent
+
 \years{2016--present}\href{htp://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator and Co-Author.\\ 
 \years{09/2013--08/2014}\href{http://midassblog.wordpress.com}{MIDAS's Blog}, the research blog of the MIDAS project. Co-Creator and Co-Author. \\ 
 \years{01/2010--12/2011} \href{http://postwimp.com}{postWIMP}, a blog on HCI and interaction design. Co-Creator and Co-Author.\\
 \years{03/2006--03/2009}\href{http://streetypes.blogspot.com}{streeTypes}, a blog on typography in public spaces. Creator and Author.  
 
 \subsection*{Artistic Collective Projects}
+\noindent
 
 \years{2008--present}Co-Founder of the experimental electronic music label Carpal Tunnel. Barcelona.\\
 \years{2002}Co-Founder and Member of b4ng, a multidisciplinary collective in search of new forms of audiovisual communication. Barcelona.\\
-\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.\\[.0cm] 
+\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.
 
 %\hrule
 \section*{Professional Activities}
@@ -544,6 +605,8 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \years{2011--2016}\emph{ACM New Interfaces for Musical Expression} (2011--2017).\\
 \years{2015--2017}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2017).\\
 \years{2012--2017}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2017).\\
+\years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
+\years{2017}\emph{International Computer Music Conference -- ICMC Music} (2017).\\
 \years{2013}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2016}\emph{International Conference on Live Interfaces} (2016).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
@@ -564,7 +627,7 @@ Course: \emph{Crossmedia infantil} (12 h). \# Students (3--4 years old): $\sim$8
 \subsection*{Music Judge}
 \noindent
 
-\years{2017}\emph{National Student Electronic Music Event 2017}, Louisiana State University. Baton Rouge, LA, USA.
+\years{2017}\emph{National Student Electronic Music Event 2017}, Louisiana State University. Baton Rouge, LA, USA.\\
 \years{2017}\emph{EarSketch National Competition 2017}, GTCMT, Georgia Tech. Atlanta, GA, USA.
 
 %\hrule
@@ -577,10 +640,10 @@ Collaborators: Jason Freeman (coordinator), Gerard Roma.
 
 \subsection*{Entrepreneurship}
 \noindent
-
+\years{05/2016--present}\emph{Women in Music Tech}, Atlanta, GA, USA. \\
+Co-Founder and Co-Chair of Women in Music Tech, the first student organization at GTCMT that looks into bringing more women into the program of music technology with actions on recruitment, external communication, internal communication, and creating a safe space.\\
 \years{02/2004--06/2010}\emph{Nodular Soft}, Barcelona. \\
-Co-Founder of a freelance studio focused on user-centric software and AV communication, development of community websites using several CMS, development of AV programs under specific needs, and usability consultancy. \\
-
+Co-Founder of a freelance studio focused on user-centric software and AV communication, development of community websites using several CMS, development of AV programs under specific needs, and usability consultancy.
 
 \subsection*{Research Visits}
 
@@ -607,7 +670,6 @@ Version control systems: CVS, Git, Subversion.\\
 Music Apps: Cubase, Live, Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor).\\
 Video analysis Apps: ELAN, VCode.\\
 Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Jekyll.
-
 
 %\vspace{1cm}
 \vfill{}
