--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -197,7 +197,7 @@ Total Dollar Amount: \$2,517,690.00
 
 \years{05/2016--present}\textsc{Women in Music Tech} \\
 Role: Co-Founder \& Co-Chair of the organization, Co-Organizer of the event. \\
-Total Fundraised Dollar Amount: \$7,250\\[.1cm]
+Total Fundraised Dollar Amount: \$9,050\\[.1cm]
 \years{08/2016--05/2017}\textbf{2016-2017 Academic Year}\\
 Funding body: School of Music, Georgia Tech. \\
 Total Dollar Amount: \$2,500\\[.1cm]
@@ -212,7 +212,11 @@ Total Dollar Amount: \$250\\[.1cm]
 Funding body: ADVANCE Program, Georgia Tech. \\
 Total Dollar Amount: \$1,000\\[.1cm]
 Funding body: Women's Resource Center, Georgia Tech. \\
-Total Dollar Amount: \$500
+Total Dollar Amount: \$500\\[.1cm]
+Funding body: College of Design Council Diversity, Georgia Tech. \\
+Total Dollar Amount: \$1,500\\[.1cm]
+Funding body: Digital Media Program, School of Literature, Media, and Communication, Georgia Tech. \\
+Total Dollar Amount: \$300
 
 \subsection*{Creator | Director}
 
@@ -229,7 +233,7 @@ Funding body: Departament de Cultura de la Generalitat de Catalunya (Department 
 Project: ``Mitösömä''.  \\
 Role: Creator, Animation Editor \& Director.\\
 Collaborators: Gerard Roma (music). \\
-Grant Amount: 3,000€ (\$3,335). \\
+Grant Amount: 3,000€ (\$3,335) \\
 Candidate’s Share: 50\% (\$1,650)  
 
 
@@ -288,6 +292,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Position \& Workshop Papers}
 \noindent
 
+\years{2017}\textbf{Xambó, A.}, Roma, G., Shah, P., Freeman, J., Magerko, B. (submitted) “Computational challenges of co-creation in collaborative music live coding: an outline".\\ 
 \years{2012}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a taxonomy for video analysis on collaborative musical tabletops". In \emph{BCS HCI 2012 Workshop on video analysis techniques for HCI}. Birmingham, UK.\\
 \years{2011}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (July 4, 2011). ``Collaborative music interaction on tabletops: an HCI approach'''. In \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne.
 
@@ -419,6 +424,9 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Collaborative Performances}
 \noindent
 
+\years{2017d}Brown, N., Chudy, M., Papadomanolaki, M., Wilkie, S., Pase, T., Stolfi, A., Schroeder, F., Xambó, A., Ikkache, L., Freeman, J., Ganesh, S., Kerure, A., Narang, J., Wang, S. (in preparation). Transmusicking I.\\
+\years{2017c}Xambó, A. Roma, G. (in preparation). Participatory action painting with my phone.\\
+\years{2017}Anna Weisling and Anna Xambó. (May 16, 2017). Beacon. \emph{NIME}. Stengade. Copenhagen, Denmark.\\
 \years{2017}Anna Weisling and Anna Xambó. (February 11, 2017). Beacon. \emph{Root Signals Festival}. Georgia Southern University. Statesboro, Georgia, United States.\\
 \years{2012}pulso (Gerard Roma and Anna Xambó). (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona, Spain.\\
 \years{2004}pulso (Gerard Roma and Anna Xambó). (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
@@ -545,8 +553,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.
 \section*{Mentoring}
 \noindent
 
-\years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (Master students of Digital Media) and Anna Weisling (PhD student of Digital Media) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
-\years{09/2015--05/2017}Co-advisor of Pratik Shah (Master student of the School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at ICLI '16 (see Peer-Reviewed Conference Papers) and we have submitted a second conference paper and are preparing a journal article.
+\years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
+\years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at ICLI '16 (see Peer-Reviewed Conference Papers) and we have submitted a second conference paper and are preparing a journal article.
 
 \section*{Additional Experience}
 \noindent
@@ -649,7 +657,8 @@ Co-Founder of a freelance studio focused on user-centric software and AV communi
 
 \years{05/2012}University of Strathclyde, Glasgow, Scotland, UK.\\
 \years{06/2011}University of Strathclyde, Glasgow, Scotland, UK.\\
-\years{04/2011--05/2011} UPF, Barcelona, Spain.
+\years{04/2011--05/2011} UPF, Barcelona, Spain.\\
+\years{03/2010--06/2010}The Open University, Milton Keynes, UK.
 
 %\hrule
 \section*{Skills}
