minor update may 2017

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -292,7 +292,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Position \& Workshop Papers}
 \noindent
 
-\years{2017}\textbf{Xambó, A.}, Roma, G., Shah, P., Freeman, J., Magerko, B. (submitted) “Computational challenges of co-creation in collaborative music live coding: an outline".\\ 
+\years{2017}\textbf{Xambó, A.}, Roma, G., Shah, P., Freeman, J., Magerko, B. (accepted) “Computational challenges of co-creation in collaborative music live coding: an outline".\\ 
 \years{2012}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (September 11, 2012). “Towards a taxonomy for video analysis on collaborative musical tabletops". In \emph{BCS HCI 2012 Workshop on video analysis techniques for HCI}. Birmingham, UK.\\
 \years{2011}\textbf{Xambó, A.}; Laney, R.; Dobbyn, C. and Jordà, S. (July 4, 2011). ``Collaborative music interaction on tabletops: an HCI approach'''. In \emph{BCS HCI 2011 Workshop on When Words Fail: What can Music Interaction tell us about HCI?}. Newcastle Upon Tyne.
 
