--- a/Statements/Xambo.ResearchStatement.tex
+++ b/Statements/Xambo.ResearchStatement.tex
@@ -90,53 +90,53 @@ Anna Xambó, PhD\\
 My research contributes to the fields of \textbf{HCI} and \textbf{sound} \& \textbf{music computing} and has \textbf{three foci}:
 
 \begin{enumerate}
-\item \textbf{Technology}: using cutting-edge technology in real-time interactive musical systems and creative algorithms borrowed from MIR and machine learning that can be useful for real-time performance and musical improvisation e.g. live coding or algorithmic music.
+\item \textbf{Technology}: using cutting-edge technology in real-time interactive musical systems and creative algorithms borrowed from music information retrieval and machine learning that can be useful for real-time performance and musical improvisation e.g. live coding or algorithmic music.
 \item \textbf{Design}: exploring novel aesthetics for real-time interactive musical systems e.g. tangible interfaces or wearable computing. 
-\item \textbf{Experience}: bringing more democratic, collaborative and participatory experiences to the fore e.g. multichannel experiences, participatory performances, DIY workshops. 
+\item \textbf{Experience}: bringing more egalitarian, collaborative and participatory experiences to the fore e.g. multichannel experiences, participatory performances, DIY workshops. 
 \end{enumerate}
 
-\section*{Tangible Music Everywhere}
+\section*{Intelligent Computer-Supported Collaborative Work: Tangible Music Everywhere}
 
-I envision pushing the boundaries of \textbf{technology}, \textbf{design}, and \textbf{experience} towards more collaborative, democratic and sustainable spaces, what I term \textbf{tangible music everywhere}. My mission is to do interdisciplinary research that embraces techniques and research methods from engineering, social sciences, and the arts for creating a new generation of interactive music systems.
+I envision pushing the boundaries of \textbf{technology}, \textbf{design}, and \textbf{experience} towards more collaborative, egalitarian and sustainable spaces, what I term \textbf{tangible music everywhere}. My mission is to do interdisciplinary research that embraces techniques and research methods from engineering, social sciences, and the arts for creating a new generation of interactive music systems.\\
+
+My area of expertise is HCI applied to the development of new technologies and user interfaces that promote new experiences. I am particularly interested in the creation of cutting-edge pedagogical interfaces that help to understand \textbf{STEM} (Science, Technology, Engineering, Math) concepts, with the special use case of \textbf{music technology} because it can attract more diversity to the scientific fields. For example, see my work on the National Science Foundation funded project TuneTable, a musical tabletop for museums that promotes computational concepts by making music.\\
+
+An interesting characteristic of these novel interfaces is their potential support to collaboration, an aspect that I have been working since my PhD. I am interested in further exploring \textbf{computer-supported collaborative work (CSCW)} applied to STEM with an special emphasis in \textbf{music technology education} and \textbf{intelligent CSCW systems} by means of \textbf{music information retrieval} and \textbf{machine learning} algorithms.
 
 \section*{Related publications}
 
-\subsection*{Technology}
+\subsection*{STEM and Education}
 
 \begin{itemize}
-\item Xambó, A., Lerch, A., Freeman, J. (2016). Learning to code through MIR. In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York. 
-\item Xambó, A., Freeman, J., Magerko, B., Shah, P. (2016). Challenges and new directions for collaborative live coding in the classroom. In \emph{ICLI 2016}. Brighton, UK.
-\item Xambó, A. (2015). \emph{Tabletop Tangible Interfaces for Music Performance: Design and Evaluation}. Thesis. The Open University.
-\item Xambó, A., Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation”. In Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME ’14). London. pp. 249–252.
-\item Roma, G. and Xambó, A. (2008). “A tabletop waveform editor for live performance”. In Proceedings of the International Conference on New Interfaces for Musical Expression (NIME ’08). Genoa, Italy.
-\item Xambó, A. (2008). \emph{Interfaces for Sketching Musical Compositions}. Unpublished master’s thesis. UPF.
+\item \textbf{Xambó, A.}, Lerch, A., Freeman, J. (2016). Learning to code through MIR. In \emph{Extended abstracts for the Late-Breaking Demo Session of the 17th International Society for Music Information Retrieval Conference (ISMIR 2016)}. New York.
+\item \textbf{Xambó, A.}, Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) “Experience and ownership with a tangible computational music installation for informal learning”. In Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI ’17). Yokohama, Japan. 
+\item Freeman, J., Magerko, B., Edwards, D., Moore, R., McKlin, T., \textbf{Xambó, A.} (2015). \emph{EarSketch: a STEAM approach to broadening participation in computer science principles}. In Proceedings of the IEEE Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT '15). Charlotte, NC. pp. 109-110.
 \end{itemize}
 
-\subsection*{Design}
+\subsection*{Computer-Supported Collaborative Work}
 
 \begin{itemize}
-\item Xambó, A. (forthcoming), ``Embodied music interaction: creative design synergies between music performance and HCI''. In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London.
-\item Xambó, A. (2015). \emph{Tabletop Tangible Interfaces for Music Performance: Design and Evaluation}. Thesis. The Open University.
-\item Xambó, A., Jewitt, C., and Price, S. (2014). “Towards an integrated methodological framework for understanding embodiment in HCI”. In Proceedings of the Extended Abstracts on Human Factors in Computing Systems (CHI ’14). Toronto. pp. 1411–1416.
-\item Xambó, A., Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation”. In Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME ’14). London. pp. 249–252.
-\item Xambó, A., Laney, R., Dobbyn, C. and Jordà, S. (2011). “Multi-touch interaction principles for collaborative real-time music activities: towards a pattern language”. In Proceedings of the International Computer Music Conference (ICMC ’11). Huddersffeld, UK. pp. 403–406.
-\item Roma, G. and Xambó, A. (2008). “A tabletop waveform editor for live performance”. In Proceedings of the International Conference on New Interfaces for Musical Expression (NIME ’08). Genoa, Italy.
+\item \textbf{Xambó, A.}, Freeman, J., Magerko, B., Shah, P. (2016). Challenges and new directions for collaborative live coding in the classroom. In \emph{ICLI 2016}. Brighton, UK.
+\item \textbf{Xambó, A.} (2015). \emph{Tabletop Tangible Interfaces for Music Performance: Design and Evaluation}. Thesis. The Open University.
+\item \textbf{Xambó, A.}, Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). “SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation”. In Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME ’14). London. pp. 249–252.
+\item \textbf{Xambó, A.}, Laney, R., Dobbyn, C. and Jordà, S. (2011). “Multi-touch interaction principles for collaborative real-time music activities: towards a pattern language”. In Proceedings of the International Computer Music Conference (ICMC ’11). Huddersffeld, UK. pp. 403–406.
 \end{itemize}
 
-\subsection*{Experience}
+\subsection*{Interaction Design}
 
 \begin{itemize}
-\item Xambó, A., Drozda, B., Weisling, A., Magerko, B., Huet, M., Gasque, T., Freeman, J. (2017) “Experience and ownership with a tangible computational music installation for informal learning”. In Proceedings of the Tangible, Embedded, and Embodied Interaction Conference (TEI ’17). Yokohama, Japan.
-\item Bogdanov, D., Haro, M., Fuhrmann, F., Xambó, A., Gómez, E. and Herrera, P. (2013). Semantic audio content-based music recommendation and visualization based on user preference examples. \emph{Information Processing \& Management}, 49(1), pp. 13-33.
-\item Freeman, J., Magerko, B., Edwards, D., Moore, R., McKlin, T., Xambó, A. (2015). \emph{EarSketch: a STEAM approach to broadening participation in computer science principles}. In Proceedings of the IEEE Research in Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT '15). Charlotte, NC. pp. 109-110.
-\item Xambó, A. (2015). \emph{Tabletop Tangible Interfaces for Music Performance: Design and Evaluation}. Thesis. The Open University.
-\item Xambó, A., Roma, G., Laney, R., Dobbyn, C. and Jordà, S. (2014). SoundXY4: supporting tabletop collaboration and awareness with ambisonics spatialisation. In \emph{Proceedings of the International Conference on New Interfaces for Musical Expression 2014 (NIME '14)}. London. pp. 249–252.
-\item Haro, M.; Xambó, A.; Fuhrmann, F.; Bogdanov, D.; Gómez, E. and Herrera, P. (2010). The Musical Avatar: a visualization of musical preferences by means of audio content description. In \emph{Proceedings of the 5th Audio Mostly Conference (AM '10)}. Piteå, Sweden.
+\item \textbf{Xambó, A.} (forthcoming), ``Embodied music interaction: creative design synergies between music performance and HCI''. In Price, S. and Broadhurst, S. eds. Digital Bodies: Creativity and Technology in the Arts and Humanities. Palgrave Macmillan, London.
+\item \textbf{Xambó, A.}, Jewitt, C., and Price, S. (2014). “Towards an integrated methodological framework for understanding embodiment in HCI”. In Proceedings of the Extended Abstracts on Human Factors in Computing Systems (CHI ’14). Toronto. pp. 1411--1416.
+\item Roma, G. and \textbf{Xambó, A.} (2008). “A tabletop waveform editor for live performance”. In Proceedings of the International Conference on New Interfaces for Musical Expression (NIME ’08). Genoa, Italy.
+\item \textbf{Xambó, A.} (2008). \emph{Interfaces for Sketching Musical Compositions}. Unpublished master’s thesis. UPF.
 \end{itemize}
 
+\subsection*{Intelligent Systems}
 
-%\item Xambó, A., Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2016). Exploring social interaction with a tangible music interface. \emph{Interacting with Computers}.
-%\item Xambó, A., Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C. and Laney, R. (2013). \emph{Let's jam the Reactable: peer learning during musical improvisation with a tabletop tangible interface}. ACM Transactions on Computer-Human Interaction (TOCHI), 20(6), pp. 36:1–36:34.
+\begin{itemize}
+\item Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E. and Herrera, P. (2013). Semantic audio content-based music recommendation and visualization based on user preference examples. \emph{Information Processing \& Management}, 49(1), pp. 13-33.
+\item Haro, M.; \textbf{Xambó, A.}; Fuhrmann, F.; Bogdanov, D.; Gómez, E. and Herrera, P. (2010). The Musical Avatar: a visualization of musical preferences by means of audio content description. In \emph{Proceedings of the 5th Audio Mostly Conference (AM '10)}. Piteå, Sweden.
+\end{itemize}
 
 %\vspace{1cm}
 \vfill{}
